--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ body{
 .navbar-light .navbar-nav .nav-link{
     color: white;
 }
+.navbar-light .navbar-nav .nav-link:hover{
+    color: :#3366cc;
+}
 #nav .nav-link{
     color:black;
 }
