--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     color: white;
 }
 .navbar-light .navbar-nav .nav-link:hover{
-    color: :#3366cc;
+    color: #3366cc;
 }
 #nav .nav-link{
     color:black;
