--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ body{
     position: relative;
     top:10px;
     left: -418px;
+    bottom: 5px;
   }
   .carwash .second{
       position:relative;
