--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ body{
     position: relative;
     top:10px;
     left: -418px;
-    bottom: 5px;
+    bottom: 2rem;
   }
   .carwash .second{
       position:relative;
