--- a/style.css
+++ b/style.css
@@ -116,10 +116,10 @@ body{
           position: absolute;
           top:0px;
       }
-      carwash .second{
+      .carwash .second{
         position:absolute;
         top:0px;
-        
+
       }
       .bt{
         position:absolute;
